--- a/style.css
+++ b/style.css
@@ -1,18 +1,58 @@
 body {
+    margin: 0;
+    padding: 0;
     height: 100vh;
     display: grid;
     place-items: center;
 }
 
 #board {
-    height: 70vh;
-    width: 70vw;
+    height: 300px;
+    width: 300px;
     display: grid;
-    grid-template-columns: repeat(3, minmax(100px, 1fr));
-   grid-template-rows: repeat(3, minmax(100px, 1fr));
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
     gap: 5px;
 }
 
-.field {
+.square{
     background: pink;
+    display: grid;
+    place-items: center;
+}
+
+.circle {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    border: 15px solid black;
+    box-sizing: border-box;
+}
+
+.cross {
+    height: 90px;
+    width: 90px;
+    position: relative;
+    transform: rotate(45deg);
+}
+
+.cross::before, .cross::after {
+    content: "";
+    background-color: black;
+    position: absolute;
+}
+
+.cross::before {
+    left: 50%;
+    width: 30%;
+    margin-left: -15%;
+    height: 100%;
+
+}
+
+.cross::after{
+    top: 50%;
+    height: 30%;
+    margin-left: -15%;
+    width: 100%;
 }
