--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p {
     place-items: center;
 }
 
-.circle {
+.O {
     height: 90px;
     width: 90px;
     border-radius: 50%;
@@ -34,28 +34,27 @@ p {
     box-sizing: border-box;
 }
 
-.cross {
+.X {
     height: 90px;
     width: 90px;
     position: relative;
     transform: rotate(45deg);
 }
 
-.cross::before, .cross::after {
+.X::before, .X::after {
     content: "";
     background-color: black;
     position: absolute;
 }
 
-.cross::before {
+.X::before {
     left: 50%;
     width: 30%;
     margin-left: -15%;
     height: 100%;
-
 }
 
-.cross::after{
+.X::after{
     top: 50%;
     height: 30%;
     margin-left: -15%;
